--- a/JavaFxNativ/pom.xml
+++ b/JavaFxNativ/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>eu.the-creator</groupId>
-	<artifactId>Java8Maven</artifactId>
+	<artifactId>JavaFxNativ</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Java8Maven</name>
+	<name>JavaFxNativ</name>
 	<url>http://maven.apache.org</url>
 	<organization>
 		<name>the-creator</name>
@@ -21,28 +21,6 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-
-	<!-- Snapshotserver für deployment mittels dem goal "deploy" Username und 
-		Password stehen in der "settings.xml" -->
-	<distributionManagement>
-		<snapshotRepository>
-			<id>nexus</id>
-			<name>Shapshot repository</name>
-			<url>http://XXX/nexus/content/repositories/snapshots/</url>
-			<uniqueVersion>false</uniqueVersion>
-		</snapshotRepository>
-	</distributionManagement>
-
-	<!-- Abhängigkeiten -->
-	<dependencies>
-		<!-- JUnit für Testing -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
 
 	<!-- Build erweitern -->
 	<build>
@@ -71,6 +49,16 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.zenjava</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>8.1.2</version>
+				<configuration>
+					<!-- Hier die Main angeben die dann später über die ".exe" gestartet 
+						werden soll. -->
+					<mainClass>eu.the.creator.javafx.nativ.App</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
